src/objects/GoogleDriveConnector__c.object
<CustomObject>
    <description>This object serves as an integration connector to the Google Drive API. It contains a reference to a Google Drive Connector Type that is used to obtain tokens. This object stores information about the access and refresh tokens.</description>
    <fields>
        <fullName>AccessTokenExpiry__c</fullName>
        <label>Access Token Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccessTokenRequested__c</fullName>
        <label>Access Token Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>NOT(ISBLANK(AccessToken__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoogleDriveConnectorType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Google Drive Connector Type</label>
        <referenceTo>GoogleDriveConnectorType__c</referenceTo>
        <relationshipLabel>Google Drive Connectors</relationshipLabel>
        <relationshipName>Google_Drive_Connectors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefreshTokenRequested__c</fullName>
        <label>Refresh Token Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenType__c</fullName>
        <label>Token Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Google Drive Connector</label>
    <nameField>
        <label>Google Drive Connector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Drive Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>